--- a/README.org
+++ b/README.org
@@ -8,7 +8,7 @@ keywords: [[https://srfi.schemers.org/?keywords=miscellaneous][Miscellaneous]]
 
 This repository hosts [[https://srfi.schemers.org/srfi-203/][SRFI 203]]: A Simple Picture Language in the Style of SICP, a [[https://srfi.schemers.org/][Scheme Request for Implementation]].
 
-This SRFI is in /draft/ status.
+This SRFI is in /final/ status.
 
 The full documentation for this SRFI can be found in the [[https://srfi.schemers.org/srfi-203/srfi-203.html][SRFI Document]].
 
